MGRENTITLE-6 Implement library for integration with Kong (#24)