@@ -22,9 +22,9 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.BooleanUtils;
 import org.apache.commons.lang3.StringUtils;
-import org.folio.security.domain.model.descriptor.ModuleDescriptor;
-import org.folio.security.domain.model.descriptor.Permission;
-import org.folio.security.domain.model.descriptor.RoutingEntry;
+import org.folio.common.domain.model.ModuleDescriptor;
+import org.folio.common.domain.model.Permission;
+import org.folio.common.domain.model.RoutingEntry;
 import org.folio.security.integration.keycloak.model.KeycloakMappings;
 import org.keycloak.representations.idm.RoleRepresentation;
 import org.keycloak.representations.idm.authorization.DecisionStrategy;
@@ -285,7 +285,7 @@ public class KeycloakModuleDescriptorMapper {
     var permissionSets = policyMappings.keySet();
     var parentPermissionSets = permissions.stream()
       .flatMap(permission -> findParentPermissionsOf(permissionSets, permission).stream())
-      .collect(toList());
+      .toList();
 
     var associatedPolicies = new ArrayList<RolePolicyRepresentation>();
     for (var permissionSet : parentPermissionSets) {
@@ -306,7 +306,7 @@ public class KeycloakModuleDescriptorMapper {
   private static List<RoutingEntry> getRoutingEntries(ModuleDescriptor descriptor) {
     return toStream(descriptor.getProvides())
       .flatMap(i -> toStream(i.getHandlers()))
-      .collect(toList());
+      .toList();
   }
 
   private static List<Permission> getPermissionSets(ModuleDescriptor descriptor) {
